# erpnext_custom_workspaces

./: MANIFEST.in  README.md  pyproject.toml
erpnext_custom_workspaces/: hooks.py  modules.txt
erpnext_custom_workspaces/config/: desktop.py
erpnext_custom_workspaces/custom_workspaces/: workspace.json
erpnext_custom_workspaces/fixtures/: role.json  workspace.json
